Crash in [@ CrashReporter::OnChildProcessDumpWritten]
Categories
(Toolkit :: Crash Reporting, defect)
Tracking
()
People
(Reporter: gsvelto, Assigned: gsvelto)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-esr91+
|
Details | Review |
Crash report: https://crash-stats.mozilla.org/report/index/43d1191e-58a9-4d76-a422-c569d0210714
Reason: EXC_BAD_ACCESS / KERN_INVALID_ADDRESS
Top 5 frames of crashing thread:
0 XUL CrashReporter::OnChildProcessDumpWritten toolkit/crashreporter/nsExceptionHandler.cpp:3314
1 XUL google_breakpad::CrashGenerationServer::WaitForOneMessage toolkit/crashreporter/breakpad-client/mac/crash_generation/crash_generation_server.cc:153
2 XUL google_breakpad::CrashGenerationServer::WaitForMessages toolkit/crashreporter/breakpad-client/mac/crash_generation/crash_generation_server.cc:98
3 libsystem_pthread.dylib _pthread_start
4 libsystem_pthread.dylib thread_start
This is a macOS-specific crash. I thought this was fixed for good but apparently I was mistaken. I'll have another look.
| Assignee | ||
Comment 1•4 years ago
|
||
Alright, I identified two issues in the crash generation code, one of which can stall the child process, preventing it from shutting down, and the other one can crash the main process. Both issues are related to timing and failures in the crash generation code. Taking this and prepping a fix.
| Assignee | ||
Comment 2•4 years ago
|
||
Don;'t you hate it when the crash reporting crashes? Hopefully there is a guard against this crating an infinite loop submitting crash reports.
Comment 5•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
| Assignee | ||
Comment 6•4 years ago
|
||
(In reply to mac198442 from comment #4)
Don;'t you hate it when the crash reporting crashes? Hopefully there is a guard against this crating an infinite loop submitting crash reports.
Yeah, it's my nightmare scenario. It doesn't loop fortunately, this ended after the second crash but was most definitely annoying for the user.
Comment 7•4 years ago
|
||
Please nominate this for ESR91 approval when you get a chance.
| Assignee | ||
Comment 8•4 years ago
|
||
Comment on attachment 9234672 [details]
Bug 1723941 - Fix several issues in macOS minidump generation which can lead to hangs & crashes r=KrisWright
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: This prevents a main process crash
- User impact if declined: If the user encounters a child process crash and we're unable to generate a crash report (for example because the user was running low on memory) then the whole browser will crash
- Fix Landed on Version: 92
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The change is small and has no impact outside of the affected crash reporting code
- String or UUID changes made by this patch: none
Comment 9•4 years ago
|
||
Comment on attachment 9234672 [details]
Bug 1723941 - Fix several issues in macOS minidump generation which can lead to hangs & crashes r=KrisWright
Approved for 91.1esr.
Comment 10•4 years ago
|
||
| bugherder uplift | ||
Description
•