Bug 1723941 - Fix several issues in macOS minidump generation which can lead to hangs & crashes r=KrisWright

Differential Revision: https://phabricator.services.mozilla.com/D121725